//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative server.proto
syntax = "proto3";
package pb;

option go_package = "info/pkg/api/grpc/pb";

service Info{
    rpc Action(Empty) returns (ActionResponse){}
}

message Empty{

}

message ActionResponse{
    string actionId= 1;
    string userId = 2;
}